...
  Widget build(BuildContext context) {
    birthdayController.text =
        "${_birthday.day}/${_birthday.month}/${_birthday.year}";

    return ModalProgressHUD(
      child: ListView(
        key: const Key('scroll'),
        padding: const EdgeInsets.all(16.0),
        children: <Widget>[
          Padding(
            padding: const EdgeInsets.all(8.0),
            child: ImgGallery(
              filesToUploadCbk: (imgList) {
...
              child: const Text("Modifica informazioni locatario", style: TextStyle(color: Colors.white)),
              style: ElevatedButton.styleFrom(backgroundColor: Colors.brown),
              onPressed: () {
                Navigator.pushNamed(context, "/edittenants");
              }),
          ElevatedButton(
              key: const Key('esci'),
              child: const Text("Esci", style: TextStyle(color: Colors.white)),
              style: ElevatedButton.styleFrom(backgroundColor: Colors.red),
              onPressed: () async {
                setState(() {
                  _isLoading = true;
                });
...
