...
            child: Column(
                mainAxisAlignment: MainAxisAlignment.center,
                children: <Widget>[
                  const Padding(
                      padding: EdgeInsets.all(16.0),
                      child: Text(
                        "Iniziamo!",
                        style: TextStyle(fontSize: 30),
                      )),
                  const Padding(
                      padding: EdgeInsets.all(16.0),
                      child: Text(
                        "Accedi o crea un account",
...
