...
                  child: Image.asset(
                    'assets/swipe-left.png',
                    height: 34,
                    width: 34,
                  )),
              Text(
                "swipe",
                style: TextStyle(letterSpacing: 2),
              ),
            ]),
          )
        ]),
        image: Image.asset('assets/appart.jpg')),
...
