...
                  child: Image.asset(
                    'assets/swipe-left.png',
                    height: 34,
                    width: 34,
                  )),
              const Text(
                "swipe",
                style: TextStyle(letterSpacing: 2),
              ),
            ]),
          )
        ]),
        image: Image.asset('assets/appart.jpg')),
...
      prefs = ModalRoute.of(context)!.settings.arguments as SharedPreferences;
      gotPrefs = true;
    }

    return IntroductionScreen(
      pages: listPagesViewModel,
      done: const Text("Iniziamo",
          style: TextStyle(fontWeight: FontWeight.w600, color: Colors.black)),
      next: const Icon(
        Icons.arrow_forward,
        color: Colors.black,
      ),
      globalBackgroundColor: Colors.white,
...
